--- a/backend/package.json
+++ b/backend/package.json
@@ -19,6 +19,7 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.9.1",
     "nodemon": "^3.1.9",
+    "path": "^0.12.7",
     "zod": "^3.24.1"
   }
 }
