--- a/backend/package.json
+++ b/backend/package.json
@@ -20,6 +20,7 @@
     "mongoose": "^8.9.1",
     "nodemon": "^3.1.9",
     "path": "^0.12.7",
+    "react-router-dom": "^7.1.1",
     "zod": "^3.24.1"
   }
 }
