--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
+    "jwt-decode": "^4.0.0",
     "multer": "^1.4.5-lts.1",
     "razorpay": "^2.9.5",
     "react-router-dom": "^7.1.1"
